# ImageMatch

./: Cargo.toml  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
backend/src/controllers/: sessions.rs  users.rs
backend/src/extractors/: mod.rs
backend/src/response/: error.rs  mod.rs  success.rs
backend/src/routes/: mod.rs  sessions.rs  users.rs
db/: Cargo.toml  schema.sql
db/src/: credentials.rs  filters.rs  images.rs  images_associations.rs  lib.rs  pool.rs  registrations.rs  result.rs  sessions.rs  tokens.rs  users.rs  utils.rs
db/tests/: credentials.rs  images.rs  images_associations.rs  registrations.rs  sessions.rs  tokens.rs  users.rs
db/tests/common/: data.rs  mod.rs
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: hooks.ts
frontend/src/lib/: error.ts  requests.ts  stores.ts  variables.ts
frontend/src/lib/components/: input.svelte
frontend/src/routes/: +page.svelte  +page.ts  app.svelte  index.svelte
frontend/src/routes/app/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/sessions/: +page.svelte
image-host/: Cargo.toml  Dockerfile
image-host/src/: main.rs
