[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "uuid", "time" ] }

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
